# benchbuild

./: .arcconfig  .arclint  .bettercodehub.yml  .buildinfo  .clog.toml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylint_init-hook.py  .pylintrc  .reviewdog.yml  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  Makefile.common  Makefile.config  Makefile.dirs  Makefile.project  README.md  README.rst  chimaira.py  codecov.yaml  doc-requirements.txt  gentoo.txt  index.html  mkdocs.yml  mypy.ini  objects.inv  pprof-array.sh  pprof-pack.sh  pprof-run.sh  pyproject.toml  pytest.ini  refactor.sh  reorder.awk  requirements.txt  (+7 more)
.github/: ci.yml  reviewdog.yml
CHANGELOG/: index.html
_modules/: index.html
_sources/: about.md.txt
_static/: documentation_options.js
about/: index.html
advanced/: index.html
basics/: index.html
benchbuild/: __init__.py  _version.py  bootstrap.py  build.py  command.py  container.py  driver.py  engine.py  environments.py  experiment.py  extensions.py  generate_config.py  likwid.py  log.py  module.py  plugins.py  project.py  report.py  run.py  settings.py  signals.py  slurm.py  statistics.py  streams.py  test.py  typing.py  variants.py  workload.py
doc-src/: Makefile  benchbuild.bootstrap.rst  benchbuild.cli.bootstrap.rst  benchbuild.cli.config.rst  benchbuild.cli.experiment.rst  benchbuild.cli.log.rst  benchbuild.cli.main.rst  benchbuild.cli.project.rst  benchbuild.cli.report.rst  benchbuild.db.rst  benchbuild.db.versions.002_Remove_GlobalConfig_table.rst  benchbuild.db.versions.rst  benchbuild.experiment.md  benchbuild.experiment.rst  benchbuild.experiments.ijpp.md  benchbuild.experiments.md  benchbuild.experiments.pgo.rst  benchbuild.experiments.pj_likwid.rst  benchbuild.experiments.pj_papi.rst  benchbuild.experiments.pj_perf.rst  benchbuild.experiments.pj_sequence.rst  benchbuild.experiments.pjtest.rst  benchbuild.experiments.polly.polly.md  benchbuild.experiments.polly.rst  benchbuild.experiments.raw.rst  benchbuild.experiments.rst  benchbuild.extensions.base.rst  benchbuild.extensions.log.rst  benchbuild.extensions.md  benchbuild.extensions.rst  benchbuild.extensions.run.rst  benchbuild.extensions.time.rst  benchbuild.log.rst  benchbuild.project.md  benchbuild.project.rst  benchbuild.projects.apollo.rst  benchbuild.projects.benchbuild.ccrypt.rst  benchbuild.projects.benchbuild.lammps.rst  benchbuild.projects.benchbuild.lapack.rst  benchbuild.projects.benchbuild.linpack.rst  (+29 more)
docs/: .buildinfo  CHANGELOG.md  Makefile  _config.yml  benchbuild.bootstrap.html  benchbuild.build.rst  benchbuild.cli.bootstrap.html  benchbuild.cli.config.html  benchbuild.cli.experiment.html  benchbuild.cli.html  benchbuild.cli.log.html  benchbuild.cli.main.html  benchbuild.cli.project.html  benchbuild.cli.report.html  benchbuild.cli.run.html  benchbuild.cli.slurm.html  benchbuild.container.html  benchbuild.db.html  benchbuild.db.manage.html  benchbuild.db.versions.001_Remove_RegressionTest_table.html  benchbuild.db.versions.002_Remove_GlobalConfig_table.html  benchbuild.db.versions.003_Unmanage_Events.html  benchbuild.db.versions.html  benchbuild.driver.html  benchbuild.experiment.html  benchbuild.experiments.compilestats.html  benchbuild.experiments.compilestats.rst  benchbuild.experiments.compilestats_ewpt.rst  benchbuild.experiments.empty.html  benchbuild.experiments.html  benchbuild.experiments.ijpp.html  benchbuild.experiments.mse.html  benchbuild.experiments.papi.html  benchbuild.experiments.papi.rst  benchbuild.experiments.pgo.html  benchbuild.experiments.pj_collect.html  benchbuild.experiments.pj_cs.html  benchbuild.experiments.pj_likwid.html  benchbuild.experiments.pj_papi.html  benchbuild.experiments.pj_perf.html  (+252 more)
driver/: setup.py
experiments/: Exp.affinestat.Makefile  Exp.affinestat.report  Exp.compilestats.Makefile  Exp.compilestats.report  Exp.multiaff.Makefile  Exp.multiaff.report  Exp.polli.Makefile  Exp.polyjit.Makefile  Exp.pprof-append.Makefile  Exp.pprof.Makefile  Exp.pprof.report  Exp.preopt.Makefile  Exp.ptr2ptr.Makefile  Exp.ptr2ptr.report  Exp.ptr2ptrnoalias.Makefile  Exp.ptr2ptrnoalias.report  Exp.runtime.Makefile  Exp.runtime.report  polli.test.sh  polyjit.test.sh  runtime.test.sh
filters/: likwid.csv
genindex/: index.html
linker/: ld
notebook/: Pollytest Evaluation.ipynb  Pollytest Evaluation.ipynb.REMOVED.git-id  pollytest.py
pjit-r/: .RData  .Rhistory  pjit-overhead.r
polybench/: Makefile
pprof/: __init__.py  build.py  driver.py  experiment.py  generate_config.py  gentoo.py  likwid.py  log.py  pplog.py  project.py  run.py  settings.py  slurm.py  test.py
py-modindex/: index.html
runners/: configsFWminmaxdef.sh  configsNegFWminmaxdef.sh.REMOVED.git-id  feature-runner.py  polly_FW_3powk
search/: index.html
src/: Makefile
statistics/: PolyJIT RAW plots.ipynb  PolyJIT RAW plots.ipynb.REMOVED.git-id  debug.R  diff-markdown.Rmd
stubs/: parse.pyi  pygtrie.pyi  pyparsing.pyi
tests/: conftest.py  test_213_error_tracking.py  test_actions.py  test_command.py  test_dict.py  test_missing_extension.py  test_path.py  test_project.py  test_registry.py  test_requirements.py  test_revision_ranges.py  test_run.py  test_schedule_tree.py  test_slurm.py  test_slurm_options.py  test_source.py  test_tasks_v2.py  (+3 more)
(+1657 files in other folders)
